<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planeback">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/font0"
        android:gravity="center"
        android:text="@string/rank"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/rank_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:stretchColumns="0,1,2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow>

            <TextView
                android:text="@string/num"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:text="@string/name"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:text="@string/score"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white" />
        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/lv_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/rank_title"/>

</android.support.constraint.ConstraintLayout>